@@ -37,6 +37,7 @@
 * [L#209876] Added option to completely disable segmented downloads 
 * [L#209885] Fix antifrag not working as it should
 * Anti-frag no longer optional - not using it was broken by segmented downloading
+* [L#215779] Fix a few hub list download issues (thanks emtee)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
